Fixes navbar on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -64,14 +64,32 @@ main {
 
 @media screen and (max-width: 768px) {
   nav {
-    flex-direction: column;
+    /* flex-direction: column; */
     flex-wrap: wrap;
+    font-size: smaller !important;
+  }
+  .mobilemenu {
+    font-size: larger !important;
+  }
+  .mobilemenusub {
+    font-size: small !important;
   }
   #NavLink {
-    padding-top: 3000px;
+    padding-top: 3px;
     padding-bottom: 0.25rem;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
+    font-size: small;
+    flex-wrap: wrap;
+  }
+  h1 {
+    font-size: large !important;
+    text-align: left !important;
+    text-align: left !important;
+  }
+  .fixmobiletitles {
+    text-align: left !important;
+    justify-content: left !important;
   }
 }
 
